# wvm-reth

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/assets/hive/: expected_failures.yaml  run_simulator.sh
.github/workflows/: gcp-docker.yml  lint.yml  load-dockerhub-image-build.yml
book/: SUMMARY.md
book/cli/: SUMMARY.md
book/developers/exex/: exex.md  hello-world.md  remote.md
book/run/: config.md  optimism.md  sync-op-mainnet.md
conf/: README.md  reth.toml
crates/blockchain-tree/src/: block_indices.rs  blockchain_tree.rs  chain.rs  state.rs
crates/chain-state/src/: chain_info.rs  notifications.rs  test_utils.rs
crates/chainspec/: Cargo.toml
crates/chainspec/src/: constants.rs  lib.rs  spec.rs
crates/cli/cli/: Cargo.toml
crates/cli/commands/: Cargo.toml
crates/cli/util/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/consensus/beacon/: Cargo.toml
crates/e2e-test-utils/src/: network.rs  node.rs  payload.rs  rpc.rs  transaction.rs  wallet.rs
crates/engine/tree/: Cargo.toml
crates/ethereum-forks/: Cargo.toml
crates/ethereum-forks/src/: display.rs  forkcondition.rs  forkid.rs
crates/ethereum/cli/: Cargo.toml
crates/ethereum/engine/: Cargo.toml
crates/ethereum/node/: Cargo.toml
crates/etl/src/: lib.rs
crates/evm/execution-errors/: Cargo.toml
crates/evm/src/: either.rs  execute.rs  lib.rs  noop.rs  system_calls.rs
crates/load-db/: Cargo.toml
crates/load-db/src/: lib.rs
crates/load-db/src/drivers/: mod.rs  planetscale.rs
crates/net/peers/: Cargo.toml
crates/node/builder/: Cargo.toml
crates/node/core/: Cargo.toml
crates/optimism/evm/: Cargo.toml
crates/optimism/payload/: Cargo.toml
crates/optimism/primitives/: Cargo.toml
crates/optimism/rpc/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: account.rs  lib.rs  request.rs  withdrawal.rs
crates/primitives/src/: alloy_compat.rs  block.rs  header.rs  proofs.rs  receipt.rs
crates/revm/: Cargo.toml
crates/wvm-static/: Cargo.toml
crates/wvm-static/src/: lib.rs
etc/: docker-compose.yml  lighthouse.yml
etc/ethereum-metrics-exporter/: config.yaml
etc/weave_vm_testnet/: README-2.md  README.md  dev-genesis.json  docker-compose-add-node.yml  docker-compose-first-node.yml  docker-compose.yml
examples/: README.md
wvm-apps/: bq-config.json
wvm-apps/devnet/: README.md  kurtosis.yaml  network_params.yaml  vanilla.yaml
wvm-apps/wvm-etl/: Cargo.toml
wvm-apps/wvm-etl/crates/bigquery/: Cargo.toml
wvm-apps/wvm-etl/crates/bigquery/src/: bq_client.rs
wvm-apps/wvm-etl/crates/repository/: Cargo.toml
wvm-apps/wvm-etl/crates/repository/src/: world_state_repository.rs
wvm-apps/wvm-etl/crates/service/: Cargo.toml
wvm-apps/wvm-etl/crates/service/src/: world_state_processor.rs
wvm-apps/wvm-etl/crates/wvm-etl/: Cargo.toml
wvm-apps/wvm-exexed/: Cargo.toml
wvm-apps/wvm-exexed/crates/arweave-upload/: Cargo.toml
wvm-apps/wvm-exexed/crates/arweave-upload/src/: lib.rs
wvm-apps/wvm-exexed/crates/bigquery/: Cargo.toml
wvm-apps/wvm-exexed/crates/bigquery/src/: client.rs
wvm-apps/wvm-exexed/crates/borsh/: Cargo.toml
wvm-apps/wvm-exexed/crates/borsh/src/: b256.rs  block.rs  bloom.rs  header.rs  lib.rs  request.rs  signature.rs  transaction.rs  withdrawal.rs
wvm-apps/wvm-exexed/crates/brotli/: Cargo.toml
wvm-apps/wvm-exexed/crates/brotli/src/: lib.rs
wvm-apps/wvm-exexed/crates/evm/: Cargo.toml
wvm-apps/wvm-exexed/crates/evm/src/: cache.rs  cache_example.rs  config.rs  factory.rs  lib.rs  wrapped_precompile.rs
wvm-apps/wvm-exexed/crates/exex-archiver/: Cargo.toml
wvm-apps/wvm-exexed/crates/exex-archiver/src/: lib.rs
wvm-apps/wvm-exexed/crates/exex-etl/src/: lib.rs  state_processor.rs
wvm-apps/wvm-exexed/crates/exex-wvm-da/: Cargo.toml
wvm-apps/wvm-exexed/crates/exex-wvm-da/src/: lib.rs
wvm-apps/wvm-exexed/crates/exexes/: Cargo.toml
wvm-apps/wvm-exexed/crates/irys/: Cargo.toml
wvm-apps/wvm-exexed/crates/irys/src/: irys.rs  lib.rs
wvm-apps/wvm-exexed/crates/lambda/: Cargo.toml
wvm-apps/wvm-exexed/crates/lambda/src/: lambda.rs
wvm-apps/wvm-exexed/crates/node/src/: lib.rs
wvm-apps/wvm-exexed/crates/precompiles/: Cargo.toml
wvm-apps/wvm-exexed/crates/precompiles/src/: lib.rs  node.rs  wevm_node_config.rs  wvm_node_config.rs
wvm-apps/wvm-exexed/crates/precompiles/src/inner/: arweave_precompile.rs  arweave_read_precompile.rs  gbq_precompile.rs  graphql_util.rs  irys_precompile.rs  kyve_precompile.rs  mod.rs  string_block.rs  test_precompile.rs  util.rs  wevm_block_precompile.rs  wvm_block_precompile.rs
wvm-apps/wvm-exexed/crates/repository/: Cargo.toml
wvm-apps/wvm-exexed/crates/repository/src/: lib.rs  state_repository.rs
wvm-apps/wvm-exexed/crates/reth-exexed/: Cargo.toml
wvm-apps/wvm-exexed/crates/reth-exexed/src/: chainspec.rs  constant.rs  main.rs  network_tag.rs  util.rs  wvm_evm.rs
wvm-apps/wvm-exexed/crates/reth-exexed/src/exex/: ar_actor.rs  ar_process.rs  mod.rs
wvm-apps/wvm-exexed/crates/reth-exexed/src/rpc/: mod.rs
wvm-apps/wvm-exexed/crates/reth-exexed/src/rpc/private_transaction/: miscalleneous.rs  mod.rs
wvm-apps/wvm-exexed/crates/static/: Cargo.toml
wvm-apps/wvm-exexed/crates/static/src/: lib.rs
wvm-apps/wvm-exexed/crates/tx/: Cargo.toml
wvm-apps/wvm-exexed/crates/tx/src/: lib.rs
wvm-apps/wvm-exexed/crates/tx/src/wvm/: mod.rs
wvm-apps/wvm-exexed/crates/tx/src/wvm/v1/: header.rs  mod.rs  transaction.rs
wvm-apps/wvm-exexed/crates/types/src/: types.rs
wvm-apps/wvm-exexed/crates/wevm-borsh/: Cargo.toml
wvm-apps/wvm-exexed/crates/wevm-borsh/src/: address.rs  b256.rs  block.rs  bloom.rs  header.rs  signature.rs  transaction.rs
wvm-apps/wvm-exexed/crates/wvm-borsh/: Cargo.toml
wvm-apps/wvm-exexed/crates/wvm-borsh/src/: address.rs  block.rs  bloom.rs  header.rs  lib.rs  request.rs  signature.rs  transaction.rs  withdrawal.rs
wvm-apps/wvm-exexed/etc/: datasource.rs  gcp_bigquery.rs  main.rs
(+413 files in other folders)
