[package]
name = "load-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
planetscale-driver = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
async-trait = "0.1.86"
eyre.workspace = true
anyhow = "1.0.98"
reth-primitives.workspace = true

