[package]
name = "wvm-static"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"]}
tokio-util = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
wvm-load-db = { path = "../load-db", name = "wvm-load-db" }