workspace = { members = ["crates/*"] }
[package]
name = "wvm-etl"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true

eyre.workspace = true
futures.workspace = true


## bigquery dependencies
gcp-bigquery-client = "0.17.0"
indexmap = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

tokio.workspace = true
