[package]
name = "wvm-exexed"
version = "1.0.0"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
reth-revm.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-primitives.workspace = true
reth-chainspec.workspace = true
parking_lot.workspace = true
schnellru.workspace = true
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-evm-ethereum.workspace = true
tracing.workspace = true
eyre.workspace = true
futures.workspace = true
alloy-primitives.workspace = true
tokio.workspace = true
exex-wvm-da.workspace = true

# bigquery dependencies
gcp-bigquery-client = "0.17.0"
indexmap = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
brotlic.workspace = true
lambda = { path = "crates/lambda" }
arweave-upload = { path = "crates/arweave-upload" }
precompiles = { path = "crates/precompiles" }
wvm-borsh = { path = "crates/wvm-borsh" }
wvm-static.workspace = true
rbrotli = { path = "crates/brotli" }
wvm-tx = { path = "crates/tx" }
borsh.workspace = true
load-db.workspace = true

parse_duration.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

[[bin]]
name = "reth"
path = "crates/reth-exexed/src/main.rs"
