[package]
name = "rbrotli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth.workspace = true
brotlic.workspace = true
borsh.workspace = true
serde_json.workspace = true
wevm-borsh = { path = "../wevm-borsh", name = "wevm-borsh" }