[package]
name = "rbrotli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth.workspace = true
brotlic.workspace = true
borsh.workspace = true
serde_json.workspace = true
wvm-borsh = { path = "../wvm-borsh", name = "wvm-borsh" }
wvm-tx = { path = "../tx", name = "wvm-tx" }
