[package]
name = "evm"
version = "0.1.0"
edition = "2024"

[dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-tracing.workspace = true
reth-ethereum-payload-builder.workspace = true

alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true


eyre.workspace = true
