[package]
name = "exex-archiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
schnellru.workspace = true
reth-revm.workspace = true
reth-chainspec.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth.workspace = true
reth-exex.workspace = true
revm-primitives.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
eyre.workspace = true
tokio.workspace = true
reqwest-graphql = "1.0.0"
rbrotli = { path = "../brotli" }
wevm-borsh = { path = "../wevm-borsh", name = "wevm-borsh" }
borsh.workspace = true
async-trait = "0.1.82"
wvm-archiver = { git = "https://github.com/weaveVM/wvm-archiver?a=true", branch = "main" }