[package]
name = "precompiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
schnellru.workspace = true
reth-revm.workspace = true
reth-chainspec.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth.workspace = true
reth-exex.workspace = true
revm-primitives.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["http2", "gzip"]}
eyre.workspace = true
arweave-upload = { path = "../arweave-upload" }
tokio.workspace = true
reqwest-graphql = "1.0.0"
rbrotli = { path = "../brotli" }
wvm-borsh = { path = "../wvm-borsh", name = "wvm-borsh" }
wvm-static = { path = "../../../../crates/wvm-static" }
wvm-tx = { path = "../tx" }
borsh.workspace = true
alloy-primitives.workspace = true
alloy-evm.workspace = true
alloy-consensus.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-trie-db.workspace = true
reth-node-builder.workspace = true
alloy-eips.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
