[package]
name = "reth-exexed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotlic.workspace = true
reth.workspace = true
reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-cli.workspace = true
reth-evm.workspace = true

alloy-primitives.workspace = true
reth-node-api.workspace = true
reth-evm-ethereum.workspace = true
revm-primitives.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-revm.workspace = true

parking_lot.workspace = true
schnellru.workspace = true

eyre.workspace = true
borsh.workspace = true
serde_json.workspace = true
wvm-borsh = { path = "../wvm-borsh", name = "wvm-borsh" }
exex-etl = { path = "../exex-etl" }
lambda = { path = "../lambda" }
arweave-upload = { path = "../arweave-upload" }
precompiles = { path = "../precompiles" }
rbrotli = { path = "../brotli" }
wvm-static = { path = "../static" }
tokio.workspace = true
exex-wvm-da.workspace = true
exex-wvm-bigquery.workspace = true
tracing.workspace = true
parse_duration.workspace = true
futures.workspace = true
