[package]
name = "reth-exexed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotlic.workspace = true
reth.workspace = true
reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-primitives.workspace = true
eyre.workspace = true
borsh.workspace = true
serde_json.workspace = true
wvm-borsh = { path = "../wvm-borsh", name = "wvm-borsh" }
lambda = { path = "../lambda" }
arweave-upload = { path = "../arweave-upload" }
precompiles = { path = "../precompiles" }
rbrotli = { path = "../brotli" }
wvm-static = { path = "../../../../crates/wvm-static" }
wvm-tx = { path = "../tx" }
tokio.workspace = true
exex-wvm-bigquery.workspace = true
tracing.workspace = true
parse_duration.workspace = true
futures.workspace = true
