[package]
name = "reth-exexed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotlic.workspace = true
reth.workspace = true
reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true

eyre.workspace = true
borsh.workspace = true
serde_json.workspace = true
wvm-borsh = { path = "../wvm-borsh", name = "wvm-borsh" }
lambda = { path = "../lambda" }
arweave-upload = { path = "../arweave-upload" }
rbrotli = { path = "../brotli" }
wvm-static = { path = "../../../../crates/wvm-static" }
load-db = { path = "../../../../crates/load-db" }
exex-wvm-da.workspace = true

wvm-tx = { path = "../tx" }
tokio.workspace = true
tracing.workspace = true
parse_duration.workspace = true
futures.workspace = true

alloy-primitives.workspace = true
alloy-consensus.workspace = true

precompiles = { path = "../precompiles" }
evm = { path = "../evm" }
node = { path = "../node" }
