[package]
name = "wvm-static"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
exex-wvm-bigquery.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.12", features = ["full"] }
once_cell = { version = "1.20.2" }