[package]
name = "wvm-tx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-consensus.workspace = true
op-alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true
alloy-eips.workspace = true
serde.workspace = true
serde_json.workspace = true
reth-primitives = { workspace = true }

[features]
optimism = ["reth-primitives/optimism"]