[package]
name = "wvm-borsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth-ethereum-primitives.workspace = true
reth-tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
eyre.workspace = true
dotenv = {version = "0.15.0"}
tokio = "1.38.0"
borsh.workspace = true
reth-primitives = { workspace = true, features = ["reth-codec"]}
alloy-primitives.workspace = true
wvm-tx = { path = "../tx" }
alloy-eips.workspace = true
alloy-consensus.workspace = true
